objects/AcctSeed__Project__c.object
<CustomObject>
    <description>Used to document and track time, expense, and revenue associated with projects.</description>
    <fields>
        <fullName>A1__c</fullName>
        <defaultValue>false</defaultValue>
        <label>A1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>A2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>A2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACA_AC_System_Size__c</fullName>
        <label>ACA AC System Size</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ACA_DC_System_Size__c</fullName>
        <label>ACA DC System Size</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AE_Email_re_Scheduling_Meeting_Output__c</fullName>
        <description>Field used in process builder to auto create tasks from projection locked checkbox for AE reminders</description>
        <formula>Date_Projection_Locked__c + 42</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AE Email re: Scheduling Meeting Output</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AE_Schedule_Pricing_Meeting_Date__c</fullName>
        <description>Field used in process builder to auto create tasks from projection locked checkbox for AE reminders</description>
        <formula>Date_Projection_Locked__c + 14</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AE Schedule Pricing Meeting Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AccountID__c</fullName>
        <description>for Diaspark
only visible to Admins</description>
        <formula>AcctSeed__Account__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AccountID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>AcctSeedProjects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Accounting_Notes__c</fullName>
        <description>Notes for Accounting</description>
        <inlineHelpText>Accounting Notes</inlineHelpText>
        <label>Accounting Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Accrued_Direct_Cost__c</fullName>
        <description>Percent Completed x Budgeted Solar Modules</description>
        <formula>( ( ( Roll_Up_Solar_Module_Project_Tasks__c + ESD_Roll_Up__c ) * Percent_Completed__c ) -   Solar_Total_Actual_Costs__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Percent Completed x Budgeted Solar Modules- Solar Module Cost</inlineHelpText>
        <label>Accrued Direct Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AcctSeedERP__Manufactured_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Manufactured Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeedERP__Quantity_Built__c</fullName>
        <label>Quantity Built</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AcctSeedERP__Quantity_Needed__c</fullName>
        <formula>AcctSeedERP__Quantity_Ordered__c - AcctSeedERP__Quantity_Built__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quantity Needed</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AcctSeedERP__Quantity_Ordered__c</fullName>
        <label>Quantity Ordered</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AcctSeedERP__Template_Type__c</fullName>
        <label>Template Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Professional Services Project</fullName>
                </value>
                <value>
                    <fullName>Manufacturing Order</fullName>
                </value>
                <value>
                    <fullName>Service Order</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AcctSeedERP__Work_Order_Number__c</fullName>
        <displayFormat>{00000}</displayFormat>
        <label>Work Order Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Organization for which this project exists for,</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Budgeted_Amount__c</fullName>
        <description>Summary of Expense budgeted at the Project Task Level.</description>
        <inlineHelpText>Total amount of Budget Line Items- PM or Active budget depending on locked status</inlineHelpText>
        <label>Budgeted Expense</label>
        <summarizedField>AcctSeed__Project_Task__c.AcctSeed__Budgeted_Amount__c</summarizedField>
        <summaryForeignKey>AcctSeed__Project_Task__c.AcctSeed__Project__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Budgeted_Hours__c</fullName>
        <description>Summary of hours budgeted at the Project Task Level. Typically used for Labor.</description>
        <inlineHelpText>Summary of hours budgeted at the Project Task Level. Typically used for Labor.</inlineHelpText>
        <label>Budgeted Hours</label>
        <summarizedField>AcctSeed__Project_Task__c.AcctSeed__Budgeted_Hours__c</summarizedField>
        <summaryForeignKey>AcctSeed__Project_Task__c.AcctSeed__Project__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Budgeted_Revenue__c</fullName>
        <description>Summary of Revenue budgeted at the Project Task Level.</description>
        <inlineHelpText>Total amount of Billing Line Items</inlineHelpText>
        <label>Budgeted Revenue</label>
        <summarizedField>AcctSeed__Project_Task__c.AcctSeed__Budgeted_Revenue__c</summarizedField>
        <summaryForeignKey>AcctSeed__Project_Task__c.AcctSeed__Project__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Project_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Person responsible for bringing the project in on time and budget while satisfying the customer. Sometimes referred to as &quot;Superman&quot; or &quot;Superwoman&quot;.</inlineHelpText>
        <label>Project Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Revenue_Recognition_Method__c</fullName>
        <inlineHelpText>Used to identify the revenue recognition method used for the project.</inlineHelpText>
        <label>Revenue Recognition Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cost Only</fullName>
                    <default>true</default>
                    <label>Cost Only</label>
                </value>
                <value>
                    <fullName>Time &amp; Materials in Period Invoiced</fullName>
                </value>
                <value>
                    <fullName>Fixed Price in Period Invoiced</fullName>
                </value>
                <value>
                    <fullName>Fixed Price Scheduled Revenue</fullName>
                </value>
                <value>
                    <fullName>Fixed Price Percent Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AcctSeed__Status__c</fullName>
        <inlineHelpText>Used in filtered look ups to limit the selection of inactive projects.</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                    <default>true</default>
                    <label>Active</label>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AcctSeed__Template_Project__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Denotes whether the project is a template project. A template project is used to clone a new project sourced from an opportunity</inlineHelpText>
        <label>Template Project</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Accumulated_Direct_Cost_Roll_UP__c</fullName>
        <description>feeds into accumulated direct cost- created so we didn thave to modify the wip, pulls in all 3600 transactions on the line items</description>
        <label>Accumulated Direct Cost Roll UP</label>
        <summarizedField>AcctSeed__Project_Task__c.Transaction_Roll_Up__c</summarizedField>
        <summaryFilterItems>
            <field>AcctSeed__Project_Task__c.RecordTypeId</field>
            <operation>notEqual</operation>
            <value>Billing Line Item</value>
        </summaryFilterItems>
        <summaryForeignKey>AcctSeed__Project_Task__c.AcctSeed__Project__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Accumulated_Direct_Cost__c</fullName>
        <description>All Account Payable Line Amounts + All Journal Entry Line Credits - All Journal Entry Lines Debig</description>
        <formula>Accumulated_Direct_Cost_Roll_UP__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>(All AP Lines with GL 36XX Posted (PAID AND UNPAID) + Journal Entry Lines Debit)- Journal Entry Lines Credit-Cash Receipts-Inbound Inventory Movement Total GL36XX</inlineHelpText>
        <label>Accumulated Direct Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Accumulated_Revenue__c</fullName>
        <description>Precent Complete x Contract Value</description>
        <formula>(Percent_Completed__c  *    Current_Contract_Price_WIP__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>% Complete x Contract Value WIP</inlineHelpText>
        <label>Accumulated Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Active_Budget__c</fullName>
        <inlineHelpText>Summary of the Active Budget field on all related Budget Line Items- The PM&apos;s estimate of the actual amount of money spent on each line item</inlineHelpText>
        <label>Active Budget</label>
        <summarizedField>AcctSeed__Project_Task__c.Active_Budget__c</summarizedField>
        <summaryFilterItems>
            <field>AcctSeed__Project_Task__c.Not_In_Rollup__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>AcctSeed__Project_Task__c.AcctSeed__Project__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Actual_Margin_KPI__c</fullName>
        <formula>1-( (TotalCostsToDate__c + Roll_Up_Project_Tasks_with_Category_OH__c) /Final_Contract_PriceProject__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Margin- Actual</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Actual_module_watt__c</fullName>
        <formula>Modules_Cost__c / Overall_Project_Size_Watts_STC__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Actual module $/watt</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Additional_Site_Access_Notes__c</fullName>
        <label>Additional Site Access Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Adjusted_Accumulated_Direct_Cost__c</fullName>
        <description>Accumulated Direct Cost minus Solar Modules Cost</description>
        <formula>Cat_OH_Allocated__c +  Accumulated_Direct_Cost__c  -   Solar_Modules_Cost_F__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Accumulated Direct Cost adjusted for Module Cost
(Cat OH Allocated + Accumulated Direct Cost - Solar Mod/Affiliate Fees Cost)</inlineHelpText>
        <label>Adjusted Accumulated Direct Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Adjusted_Cost_at_Completion__c</fullName>
        <description>Cost at Completion minus Solar Modules Budgeted</description>
        <formula>Cost_at_Completion2__c  -    Solar_Modules_Budgeted_Roll_UP__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Cost at Completion adjusted for Module Cost
(Cost at Completion-Solar Modules and Aff Fees Budgeted)</inlineHelpText>
        <label>Adjusted Cost at Completion</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Affiliate_and_Ref_Fees_Actual__c</fullName>
        <label>Affiliate and Ref Fees Actual</label>
        <summarizedField>AcctSeed__Project_Task__c.Total_Actual_Costs__c</summarizedField>
        <summaryFilterItems>
            <field>AcctSeed__Project_Task__c.Name</field>
            <operation>contains</operation>
            <value>Affiliate, Special Budget</value>
        </summaryFilterItems>
        <summaryForeignKey>AcctSeed__Project_Task__c.AcctSeed__Project__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Affiliate_and_Ref_Fees__c</fullName>
        <description>BUDGETED AMOUNT</description>
        <label>Affiliate and Ref Fees</label>
        <summarizedField>AcctSeed__Project_Task__c.AcctSeed__Budgeted_Amount__c</summarizedField>
        <summaryFilterItems>
            <field>AcctSeed__Project_Task__c.Name</field>
            <operation>contains</operation>
            <value>Affiliate, Special Budget</value>
        </summaryFilterItems>
        <summaryForeignKey>AcctSeed__Project_Task__c.AcctSeed__Project__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amt_Unpaid_0_Invoice__c</fullName>
        <description>Roll up of Amount field on corresponding APLines 
Posted, Unpaid, $0 AP Amount 
used in the Dollars Paid calculation to count zero dollar invoices we cannot &quot;pay&quot; in the system anymore</description>
        <label>Amt Unpaid 0 Invoice</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Annual_Degradation__c</fullName>
        <defaultValue>0.005</defaultValue>
        <inlineHelpText>Only editable by the Resource Group and the O&amp;M coordinator.</inlineHelpText>
        <label>Annual Degradation</label>
        <precision>17</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>App_Fee_Paid_By__c</fullName>
        <description>Indicates who paid the rebate application fee.</description>
        <label>App Fee Paid By</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>N/A</fullName>
                    <default>true</default>
                    <label>N/A</label>
                </value>
                <value>
                    <fullName>Host Customer</fullName>
                </value>
                <value>
                    <fullName>System Owner</fullName>
                </value>
                <value>
                    <fullName>Borrego Solar</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Approval_Date_Federal__c</fullName>
        <label>Approval Date (Federal)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Approved_Change_Orders__c</fullName>
        <formula>IF( Job_Number__c =&quot;901-0833&quot;, 0,AcctSeed__Opportunity__r.Change_Orders__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Change Orders that have been approved and are affecting the Contract Price</inlineHelpText>
        <label>Approved Change Orders</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Approved_Development_Budget__c</fullName>
        <inlineHelpText>Rollup of Approved Amount to Spend on associated Contract Committee Submittal records.</inlineHelpText>
        <label>Approved Development Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apr_Estimated_Performance__c</fullName>
        <description>Needed for customer portal in Diaspark for Borrego O&amp;M</description>
        <inlineHelpText>Needed for customer portal in Diaspark for Borrego O&amp;M</inlineHelpText>
        <label>Apr Estimated Performance</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apr_Irradiance_Data__c</fullName>
        <description>Needed for customer portal in Diaspark for Borrego O&amp;M</description>
        <inlineHelpText>Needed for customer portal in Diaspark for Borrego O&amp;M</inlineHelpText>
        <label>Apr Irradiance Data</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Array_Access__c</fullName>
        <label>Array Access</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>As_Built_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box if the As Built Set is complete. The date the box is checked will be copied into the As Built Complete Date on the Project</inlineHelpText>
        <label>As Built Complete?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>As_Built_Completed__c</fullName>
        <inlineHelpText>Actual Date of As-Built Released- forecasted until actual</inlineHelpText>
        <label>As-Built Release Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>As_Built_DWG_LInk__c</fullName>
        <label>As Built DWG LInk</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>As_Built_Forecast_Release_Date__c</fullName>
        <inlineHelpText>Forecast date for the As-Built set release.</inlineHelpText>
        <label>As Built Forecast Release Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>As_Built_PDF_Link__c</fullName>
        <label>As Built PDF Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>As_Built_Set__c</fullName>
        <inlineHelpText>Link to final As-Built pdf document</inlineHelpText>
        <label>As- Built Set</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Aug_Estimated_Performance__c</fullName>
        <description>Needed for customer portal in Diaspark for Borrego O&amp;M</description>
        <inlineHelpText>Needed for customer portal in Diaspark for Borrego O&amp;M</inlineHelpText>
        <label>Aug Estimated Performance</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Aug_Irradiance_Data__c</fullName>
        <description>Needed for customer portal in Diaspark for Borrego O&amp;M</description>
        <inlineHelpText>Needed for customer portal in Diaspark for Borrego O&amp;M</inlineHelpText>
        <label>Aug Irradiance Data</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Azimuth_and_tilt_of_the_Pyranometer__c</fullName>
        <description>Part of O&amp;M Site Information form.</description>
        <inlineHelpText>Pyro is another name for actual weather station - important for SPG group in performance investigations. Sometiems not included in PV Syst or As Builts</inlineHelpText>
        <label>Azimuth and tilt of the Pyranometer?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Azimuth_and_tilt_of_the_modules__c</fullName>
        <description>Part of O&amp;M Site Information Form</description>
        <inlineHelpText>important for SPG group in performance investigations. Sometiems not included in PV Syst or As Builts</inlineHelpText>
        <label>Azimuth and tilt of the modules?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>B1__c</fullName>
        <defaultValue>false</defaultValue>
        <label>B1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>B2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>B2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Balance__c</fullName>
        <formula>Final_Contract_PriceProject__c - Roll_Up_Billed_To_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BillingSOV__c</fullName>
        <description>Used by Accounting to link the Billing SOV google sheet</description>
        <inlineHelpText>Used by Accounting to link the Billing SOV google sheet</inlineHelpText>
        <label>Billing SOV</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Borrego_COI_Issued_to_Client__c</fullName>
        <description>If a COI is issued between BSSI and client direct</description>
        <label>Borrego COI Issued to Client?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_NA</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Borrego_Emails_configured_on_DAS_alerts__c</fullName>
        <description>Which Borrego Emails are configured to receive alerts relating to this site?</description>
        <inlineHelpText>Which Borrego Emails are configured to receive alerts relating to this site?</inlineHelpText>
        <label>Borrego Emails configured on DAS alerts?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Borrego_Received__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Has Borrego received the federal rebate yet?</description>
        <label>Borrego Received</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Borrego_Review_Actual__c</fullName>
        <label>Borrego Review Actual</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Borrego_Review_Forecast_TEXT__c</fullName>
        <formula>&quot;Borrego Review Forecast&quot;&amp; &quot;-&quot; &amp; Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Borrego Review Forecast-TEXT</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Borrego_Review_Forecast__c</fullName>
        <label>Borrego Review Forecast</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Box_Folders__c</fullName>
        <label>Box Folders</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Box_Most_Recent_Error__c</fullName>
        <label>Box Most Recent Error</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Branch__c</fullName>
        <inlineHelpText>Regional office responsible for Project</inlineHelpText>
        <label>Branch</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Berkeley</fullName>
                </value>
                <value>
                    <fullName>Corporate</fullName>
                </value>
                <value>
                    <fullName>California</fullName>
                </value>
                <value>
                    <fullName>Colorado</fullName>
                </value>
                <value>
                    <fullName>Connecticut</fullName>
                </value>
                <value>
                    <fullName>Illinois</fullName>
                </value>
                <value>
                    <fullName>Maine</fullName>
                </value>
                <value>
                    <fullName>Massachusetts</fullName>
                </value>
                <value>
                    <fullName>Minnesota</fullName>
                </value>
                <value>
                    <fullName>Nevada</fullName>
                </value>
                <value>
                    <fullName>New Hampshire</fullName>
                </value>
                <value>
                    <fullName>New Jersey</fullName>
                </value>
                <value>
                    <fullName>New York</fullName>
                </value>
                <value>
                    <fullName>North Carolina</fullName>
                </value>
                <value>
                    <fullName>Oregon</fullName>
                </value>
                <value>
                    <fullName>Rhode Island</fullName>
                </value>
                <value>
                    <fullName>South Carolina</fullName>
                </value>
                <value>
                    <fullName>Texas</fullName>
                </value>
                <value>
                    <fullName>Washington</fullName>
                </value>
                <value>
                    <fullName>Alabama</fullName>
                </value>
                <value>
                    <fullName>Alaska</fullName>
                </value>
                <value>
                    <fullName>Arizona</fullName>
                </value>
                <value>
                    <fullName>Arkansas</fullName>
                </value>
                <value>
                    <fullName>Delaware</fullName>
                </value>
                <value>
                    <fullName>Florida</fullName>
                </value>
                <value>
                    <fullName>Georgia</fullName>
                </value>
                <value>
                    <fullName>Hawaii</fullName>
                </value>
                <value>
                    <fullName>Idaho</fullName>
                </value>
                <value>
                    <fullName>Indiana</fullName>
                </value>
                <value>
                    <fullName>Iowa</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Budget_Finalized_100__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Project Managers: Notice to Accounting that the budget is finalized for the project</inlineHelpText>
        <label>Budget Finalized/100%</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Budgets_Total__c</fullName>
        <label>Budgets Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Building_Permit_Approval_Actual__c</fullName>
        <label>Building Permit Approval Actual</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Building_Permit_Approval_Forecast_TEXT__c</fullName>
        <formula>&quot;Building Permit Approval Forecast&quot;&amp; &quot;-&quot; &amp; Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Building Permit Approval Forecast- TEXT</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Building_Permit_Approval_Forecast__c</fullName>
        <label>Building Permit Approval Forecast</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Building_Permit_Submittal_Actual__c</fullName>
        <label>Building Permit Submittal Actual</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Building_Permit_Submittal_Forecast_TEXT__c</fullName>
        <formula>&quot;Building Permit Submittal Forecast&quot;&amp; &quot;-&quot; &amp; Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Building Permit Submittal Forecast- TEXT</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Building_Permit_Submittal_Forecast__c</fullName>
        <label>Building Permit Submittal Forecast</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Business_Hours__c</fullName>
        <label>Business Hours</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Buyer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used to list the Buyer of the Project, only for Development Deals. 
Pushed from the PF Pipeline</description>
        <label>Buyer/Owner</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Projects (Buyer)</relationshipLabel>
        <relationshipName>Projects1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>C1__c</fullName>
        <defaultValue>false</defaultValue>
        <label>C1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>C2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>C2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>C3__c</fullName>
        <defaultValue>false</defaultValue>
        <label>C3</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CD_Baseline_Date__c</fullName>
        <inlineHelpText>Expected Date of Construction Set IFR Release</inlineHelpText>
        <label>CD IFR Baseline Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CD_Days_from_Baseline__c</fullName>
        <formula>(Const_Set_Completed__c  - CD_Baseline_Date__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CD Days from Baseline</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CD_Forecast_Release_Date__c</fullName>
        <inlineHelpText>Forecasted Date of Construction Set Release</inlineHelpText>
        <label>CD Forecast Release Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CD_IFC_Baseline_Date__c</fullName>
        <inlineHelpText>baseline CD release date- ISSUED FOR CONSTRUCTION</inlineHelpText>
        <label>CD IFC Baseline Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CD_IFC_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box if the CD IFC Set is complete. The date the box is checked will be copied into the CD IFC Set Release Date on the Project</inlineHelpText>
        <label>CD IFC Complete?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CD_IFC_Release_Date__c</fullName>
        <inlineHelpText>date of construction set release- ISSUED FOR CONSTRUCTION</inlineHelpText>
        <label>CD IFC Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CD_IFC_Set_PDF_Link__c</fullName>
        <inlineHelpText>link to construction set ISSUED FOR CONSTRUCTION</inlineHelpText>
        <label>CD IFC Set PDF Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>CD_IFR_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box if the CD IFR Set is complete. The date the box is checked will be copied into the CD IFR Release Date on the Project</inlineHelpText>
        <label>CD IFR Complete?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CD_IFR_Reached_Structural__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used in CDIFR Issue Tracker PB</description>
        <inlineHelpText>Used in CDIFR Issue Tracker PB</inlineHelpText>
        <label>CD IFR Reached  - Structural</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>